--- a/views/index.html
+++ b/views/index.html
@@ -7,13 +7,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" type="text/css" href="lib/normalize.css">
   <link rel="stylesheet" type="text/css" href="index.css">
-  <title>Scrat Template Project</title>
+    <script src="lib/zepto.js"></script>
+  <title>ripple test</title>
 </head>
 <body>
-  <script src="lib/scrat.js"></script>
-  <script>
-    require.config(__FRAMEWORK_CONFIG__);
-    require.async('boot', function (boot) { boot() });
-  </script>
+<script src="app.js"></script>
 </body>
 </html>
