--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" type="text/css" href="lib/normalize.css">
   <link rel="stylesheet" type="text/css" href="index.css">
-    <script src="lib/zepto.js"></script>
+  <script src="lib/zepto.js"></script>
+  <script src="lib/vue.js"></script>
   <title>ripple test</title>
 </head>
 <body>
