--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="index.css">
   <script src="lib/zepto.js"></script>
   <script src="lib/vue.js"></script>
-  <title>ripple test</title>
+  <title>vue test</title>
 </head>
 <body>
 <script src="app.js"></script>
